# apply_jobs_automation

./: .gitignore  alembic.ini  docker-compose.yml  example.config.yaml  job_applications.db  main.py  pydantic_ai_role.py  pyproject.toml
.github/instructions/: copilot.instructions.md
alembic/: env.py
alembic/versions/: 293520d53e0d_create_jobapplication_table.py  8f0dd71be4e5_add_role.py  a50e9d73f891_make_role_non_nullable.py
db/: __init__.py  crud.py  database.py  models.py
documentation/: database.md
generate_cv/: generate_summary.py  models.py  pdf_generator.py
generate_cv/documents/yaml/: backend.yaml  frontend.yaml  fullstack.yaml
generate_cv/paser/: yaml.py
generate_cv/styles/: __init__.py  base_style.py  classic_style.py
provider/: glints.py
scripts/: clean_database.py  keep_browser_open.py
